--- a/projects/lobby/src/app/lobby/lobby.component.html
+++ b/projects/lobby/src/app/lobby/lobby.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="stream">
-  <h2>Live Stream: {{stream.id | uppercase}}</h2>
+  <h2>Live Stream: {{stream.uuid | uppercase}}</h2>
 
   <div>
     <video id="video" style="background-color: black" muted autoplay></video>
