--- a/projects/lobby/src/app/lobby/lobby.component.html
+++ b/projects/lobby/src/app/lobby/lobby.component.html
@@ -29,20 +29,20 @@
 
     <div id="lobby-main">
         <div id="lobby-stream-video">
-            <video id="video-stream" muted autoplay></video>
+            <canvas id="canvasOne" >
+                Your browser does not support HTML5 Canvas.
+            </canvas>
         </div>
 
         <div id="lobby-quest-video">
             <div class="lobby-quest-video-box">
                 <video id="video" style="background-color: black" muted autoplay></video>
                 <div class="btn-group control-bar" data-toggle="buttons">
-                    <label class="btn btn-primary active">
-                        <input type="checkbox" checked>active
+                    <label class="btn btn-primary active" (click)="toggleActive('video', 'local')">
+                        <input id="local" type="checkbox" disabled> active
                     </label>
                 </div>
             </div>
-
-            <!--    <video id="remote-video" style="background-color: black" muted autoplay></video>-->
         </div>
     </div>
 </div>
