--- a/projects/lobby/src/app/lobby/lobby.component.scss
+++ b/projects/lobby/src/app/lobby/lobby.component.scss
@@ -67,3 +67,10 @@
   background: transparent url("../../assets/icons/logo.png") center no-repeat;
 }
 
+#canvasOne {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 25px;
+
+}
