--- a/projects/core/src/lib/component/lobby/lobby.component.html
+++ b/projects/core/src/lib/component/lobby/lobby.component.html
@@ -1,4 +1,3 @@
-<lib-lobby-next></lib-lobby-next>
 <div *ngIf="stream">
 
     <div class="row_line">
@@ -28,7 +27,7 @@
 
 
     <div *ngIf="!hasMediaStreamSet || displaySettings">
-        <app-device-settings [cbk]="cbk" [closeCbk]=toggleSettings.bind(this)></app-device-settings>
+        <shig-device-settings [cbk]="cbk" [closeCbk]=toggleSettings.bind(this)></shig-device-settings>
     </div>
 
     <div id="lobby-main">
