add material css

--- a/projects/core/src/lib/component/lobby/lobby.component.html
+++ b/projects/core/src/lib/component/lobby/lobby.component.html
@@ -4,6 +4,8 @@
         <div class="headline">
             <h5>Live Stream: {{stream.uuid | uppercase}}</h5>
             <span>{{state}}</span>
+            <md-switch selected></md-switch>
+            Was?
         </div>
         <div class="btn-group" role="group" aria-label="Basic example">
             <button type="button" class="btn btn-secondary" (click)="goBack()">Back</button>
