add shig logo in canvas element

--- a/projects/core/src/lib/component/lobby/lobby.component.html
+++ b/projects/core/src/lib/component/lobby/lobby.component.html
@@ -64,7 +64,7 @@
 
         <!--// Video Stream -->
         <div class="video-call-wrapper">
-            <div id="lobby-stream-video" class="video-participant">
+            <div id="lobby-stream-video" class="stream-video canvas-logo">
                 <canvas id="canvasOne">
                     Your browser does not support HTML5 Canvas.
                 </canvas>
