--- a/projects/core/assets/scss/lobby.scss
+++ b/projects/core/assets/scss/lobby.scss
@@ -58,8 +58,8 @@ body.dark {
     --placeholder-text: #fff;
     --navigation-bg: #3c3f56;
     --button-bg: #3c3f56;
-    --main-color: #6f74ff;
-    --message-bg-2: #6f74ff;
+    --main-color: #8DCAFF;
+    --message-bg-2: #8DCAFF;
 }
 
 body.dark .mic {
@@ -89,6 +89,11 @@ body.dark .btn-close-right {
 
 .dark .chat-typing-area {
     box-shadow: none;
+}
+
+button:disabled {
+    background-color: #75777c !important;
+    cursor: not-allowed;
 }
 
 /*==================== LAYOUT ====================*/
@@ -149,7 +154,7 @@ body.dark .btn-close-right {
     background-position: center left 12px;
     background-size: 16px;
     font-size: 14px;
-    margin-left: 1px;
+    margin-left: 5px;
 }
 
 .nav-icon-button.secondary {
@@ -230,6 +235,7 @@ body.dark .btn-close-right {
     background-color: var(--app-background);
     padding-bottom: 2px;
 }
+.canvas-logo,
 .guest-video .guest-icon,
 .guest-video img,
 .guest-video video {
@@ -251,6 +257,11 @@ body.dark .btn-close-right {
 
 .guest-video video {
     background-image: url('data:image/svg+xml, <svg xmlns="http://www.w3.org/2000/svg" height="48px" viewBox="0 0 24 24" width="48px" fill="%233c3f56"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/></svg>');
+}
+
+.canvas-logo {
+    background-size: 35%;
+    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" version="1.0" width="250px" height="250px" viewBox="0 0 512.000000 512.000000" preserveAspectRatio="xMidYMid meet"> <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)" fill="%238DCAFF" stroke="%238DCAFF" stroke-width="10"> <path fill="none" stroke="none" d="M0 2560 l0 -2560 2560 0 2560 0 0 2560 0 2560 -2560 0 -2560 0 0 -2560z m2875 1876 c745 -135 1340 -682 1525 -1403 47 -181 63 -330 57 -533 -3 -96 -13 -215 -22 -265 -112 -610 -492 -1116 -1040 -1386 -454 -222 -971 -257 -1450 -98 -779 259 -1304 983 -1305 1801 -1 610 279 1166 772 1534 270 202 554 312 943 368 71 10 434 -3 520 -18z"/> <path fill="%238DCAFF" stroke="%238DCAFF" stroke-width="0" d="M2360 4260 c-277 -34 -541 -132 -770 -285 -643 -430 -917 -1249 -663 -1978 126 -364 390 -691 723 -898 421 -261 959 -324 1440 -168 130 42 335 145 450 226 134 95 338 302 426 433 440 650 396 1474 -108 2075 -253 302 -620 510 -1023 580 -108 19 -371 27 -475 15z m539 -308 c55 -41 65 -65 63 -159 -1 -49 -13 -173 -27 -278 -45 -322 -85 -639 -84 -660 1 -39 37 60 118 325 74 244 144 449 170 498 25 46 132 67 190 37 16 -8 40 -28 55 -45 48 -58 46 -74 -99 -668 -42 -173 -75 -321 -73 -330 5 -21 39 31 126 193 140 261 161 285 249 285 48 0 58 -4 85 -31 30 -29 31 -32 25 -98 -4 -44 -24 -121 -57 -217 -92 -264 -189 -563 -266 -819 -137 -456 -161 -522 -230 -627 -87 -131 -195 -209 -341 -245 -86 -22 -377 -24 -468 -4 -129 28 -251 90 -342 174 -86 79 -195 240 -486 725 -215 357 -316 540 -323 584 -6 40 28 113 68 141 33 25 118 34 158 17 72 -30 473 -556 793 -1040 132 -201 150 -222 180 -218 35 5 26 54 -32 175 -53 114 -71 173 -53 173 21 0 86 -65 182 -185 163 -202 214 -243 239 -197 14 26 -19 93 -126 253 -99 148 -128 199 -114 199 14 0 104 -77 241 -206 130 -122 185 -164 212 -164 54 0 20 70 -99 204 -120 136 -213 248 -229 279 -12 23 -12 27 -1 27 16 0 120 -66 239 -153 91 -65 137 -83 168 -67 11 6 20 18 20 26 0 22 -101 119 -275 264 -199 167 -257 226 -253 259 4 37 37 49 169 61 146 13 213 27 240 49 28 22 19 38 -35 61 -45 20 -161 38 -451 71 -104 12 -221 27 -260 33 l-70 12 1 339 c1 354 14 557 40 637 21 65 53 88 121 88 148 0 162 -49 194 -689 7 -134 16 -235 20 -225 3 11 14 69 24 129 45 287 147 847 166 905 23 73 40 96 84 117 39 17 121 10 154 -15z"/> </g> </svg>');
 }
 
     /*==================== Main App ====================*/
@@ -280,13 +291,13 @@ body.dark .btn-close-right {
     flex-wrap: wrap;
 }
 
-.video-participant {
+.stream-video {
     width: 100%;
     height: 100%;
     position: relative;
 }
 
-.video-participant canvas {
+.stream-video canvas {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -438,15 +449,7 @@ body.dark .btn-close-right {
 
 /*==================== Devices Between 520px - 720px ====================*/
 @media screen and (max-width: 520px) and (max-width: 720px) {
-    .video-participant {
-        position: relative;
-        width: 50%;
-        height: 33.3%;
-    }
+
 }
 
-button:disabled {
-    background-color: #75777c !important;
-    cursor: not-allowed;
-}
 
