add active stream switch

--- a/projects/core/src/lib/component/lobby/lobby.component.html
+++ b/projects/core/src/lib/component/lobby/lobby.component.html
@@ -84,7 +84,8 @@
                     <div class="participant-action">
                         <button class="btn-mic-off"></button>
                         <button class="btn-camera-off"></button>
-                        <md-filter-chip label="active"></md-filter-chip>
+                        <md-switch id="switch" icons class="active-video"></md-switch>
+<!--                        <md-filter-chip label="active"></md-filter-chip>-->
                     </div>
                     <a href="#" class="name-tag">Andy Will</a>
                     <video id="video" muted autoplay></video>
