--- a/projects/core/assets/scss/lobby.scss
+++ b/projects/core/assets/scss/lobby.scss
@@ -47,6 +47,17 @@ body {
     --common-padding: 10px;
 }
 
+:root {
+    /* System tokens */
+    --md-sys-color-primary: #3c3f56;
+    --md-sys-color-outline: #8DCAFF;
+    --md-switch-selected-focus-handle-color: #8DCAFF;
+    --md-switch-selected-handle-color: #8DCAFF;
+    --md-switch-focus-handle-color: #3c3f56;
+    --md-switch-handle-color: #3c3f56;
+    --md-switch-track-color: rgba(60, 63, 86, 0.26);
+}
+
 /*========== Variables Dark theme ==========*/
 
 body.dark {
@@ -315,11 +326,12 @@ button:disabled {
     padding: 4px 12px;
 }
 
-.participant-actions {
+.participant-action {
     position: absolute;
     display: flex;
     left: 12px;
     top: 12px;
+    width: calc(100% - 24px);
 }
 
 .btn-mic,
@@ -353,54 +365,9 @@ button:disabled {
     background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="white"><path d="M0 0h24v24H0z" fill="none"/><path d="M17 10.5V7c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h12c.55 0 1-.45 1-1v-3.5l4 4v-11l-4 4z"/></svg>');
 }
 
-/*==================== Guests bottom ====================*/
-.participants {
-    position: relative;
-    display: none;
-    background-color: var(--button-bg);
-    box-shadow: var(--navigation-box-shadow);
-    margin-top: 16px;
-    padding: 12px;
-    border-radius: var(--asset-border-radius);
-    width: 100%;
-}
-
-.participant {
-    position: relative;
-}
-
-.participant-more {
-    background-color: #e1e0e1;
-    font-size: 14px;
+.active-video {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #636181;
-    font-weight: 700;
-    border-radius: var(--asset-border-radius);
-    min-width: 32px;
-}
-
-.participant-action {
-    position: absolute;
-    display: flex;
-    left: 12px;
-    top: 12px;
-}
-
-.profile-picture {
-    border-radius: var(--asset-border-radius);
-    width: 25%;
-    height: 150px;
-    overflow: hidden;
-    padding: 0 2px;
-    flex-shrink: 0;
-}
-
-.profile-picture img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    margin-left: auto;
 }
 
 /*==================== MEDIA QUERIES ====================*/
